Show next module publication date in TOC.

--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn
+﻿@using System.Globalization
+@using uLearn
 @model TocModel
 
 <ul class="side-bar units-list navbar-collapse collapse nav navbar-nav container">
@@ -14,7 +15,7 @@
 				<ul id=@("N" + iUnit) class="slides-list @collapseOption">
 					@foreach (var slide in unit.Slides)
 					{
-						var url = Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = slide.Index});
+						var url = Url.Action("Slide", "Course", new { courseId = Model.CourseId, slideIndex = slide.Index });
 						<i class="@GetIconClass(slide) navbar-label" title="@GetTitle(slide)"></i>
 						<li class="slide-list-item @(slide == Model.CurrentSlide ? "selected" : "") " onclick="window.location.href = '@url' "><a href="@url">@slide.Title</a></li>
 					}
@@ -33,13 +34,17 @@
 					}
 				</ul>
 			</li>
-			iUnit++;
+					iUnit++;
+		}
+		if (Model.NextUnitTime < DateTime.MaxValue)
+		{
+			<li class="units-list-item"><a id="badge"><div class="label label-info">Следующий модуль — @Model.NextUnitTime.ToString("dd MMMM", CultureInfo.CreateSpecificCulture("ru"))</div></a></li>
 		}
 		if (User.IsInRole(LmsRoles.Instructor) || User.IsInRole(LmsRoles.Admin))
 		{
-			<li class="units-list-item units-list-item-text">@Html.ActionLink("Total statistics", "TotalStatistics", "Analytics", new {courseId = Model.CourseId}, null)</li>
-			<li class="units-list-item units-list-item-text">@Html.ActionLink("Users statistics", "UsersStatistics", "Analytics", new {courseId = Model.CourseId}, null)</li>
-			<li class="units-list-item units-list-item-text">@Html.ActionLink("Personal statistics", "PersonalStatistics", "Analytics", new {courseId = Model.CourseId}, null)</li>
+			<li class="units-list-item units-list-item-text">@Html.ActionLink("Total statistics", "TotalStatistics", "Analytics", new { courseId = Model.CourseId }, null)</li>
+			<li class="units-list-item units-list-item-text">@Html.ActionLink("Users statistics", "UsersStatistics", "Analytics", new { courseId = Model.CourseId }, null)</li>
+			<li class="units-list-item units-list-item-text">@Html.ActionLink("Personal statistics", "PersonalStatistics", "Analytics", new { courseId = Model.CourseId }, null)</li>
 		}
 	}
 </ul>
@@ -53,7 +58,7 @@
 	string typeClass = slide is QuizSlide ? "glyphicon-pushpin"
 		: slide is ExerciseSlide ? (isComplete ? "glyphicon-check" : "glyphicon-edit")
 			: (isVisited ? "glyphicon-ok" : "");
-	@(progressClass + " glyphicon " + typeClass)
+			@(progressClass + " glyphicon " + typeClass)
 }
 
 @helper GetTitle(Slide slide)
