--- a/src/uLearn.Web/Views/Account/Register.cshtml
+++ b/src/uLearn.Web/Views/Account/Register.cshtml
@@ -7,6 +7,7 @@
 
 	@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 	{
+		@Html.HiddenFor(m => m.ReturnUrl)
 		@Html.AntiForgeryToken()
 		<h4>Регистрация аккаунта</h4>
 		<hr />
