--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -18,7 +18,7 @@
 						Ваш вопрос увидят преподаватели и смогут разобрать его на аудиторной практике.
 						Кроме того, авторы курса смогут подправить материал так, чтобы он стал понятнее.
 					</div>
-					<textarea id="questField" name="question" class="ask-bar"></textarea>
+					<textarea id="questField" name="question" class="ask-bar focus-on-show"></textarea>
 					<button class="btn btn-primary" type="submit">Отправить</button>
 				}
 			</div>
