--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -21,6 +21,10 @@
 
 .load-content {
 }
+
+.run-style-error, .run-service-error, .run-compile-error, .run-success, .run-wa {
+}
+
 /* ReSharper restore DeclarationIsEmpty */
 /*#endregion */
 
@@ -100,25 +104,15 @@ a.nav-arrow:hover {
 	display: none;
 }
 
-.actual-output {
+.actual-output, .error-output, .expected-output {
 	float: left;
 	width: 50%;
 	margin: 0;
 }
 
-.expected-output {
-	float: left;
-	width: 50%;
-	margin: 0;
-}
-
-.actual-output pre {
-	min-height: 200px;
-}
-
-.expected-output pre {
-	min-height: 200px;
-}
+	.actual-output pre, .error-output pre, .expected-output pre {
+		min-height: 200px;
+	}
 
 .clear-code-button {
 	margin: 20px 0 20px 0;
@@ -130,20 +124,8 @@ a.nav-arrow:hover {
 	font-size: small;
 }
 
-.after-run-block {
+.run-result {
 	display: none;
-}
-
-.actual-output-content {
-}
-
-.expected-output-content {
-}
-
-.send-question {
-}
-
-.questions-log {
 }
 
 .diff-table {
@@ -158,7 +140,6 @@ a.nav-arrow:hover {
 	line-height: 46px;
 	width: 100%;
 	text-align: center;
-	display: none;
 	font-size: x-large;
 	color: white;
 	margin-top: 10px;
