--- a/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
+++ b/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CoursePageModel
 @using uLearn;
-@{ var slide = Model.Slide as ExerciseSlide; }
+@{ var slide = (ExerciseSlide)Model.Slide; }
 <textarea id="secretCodeExercise" class='hide'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine™</a> and <a target="blank" href="http://codemirror.net/">CodeMirror</a></div>
 <textarea class='code code-exercise'>@(@Model.LatestAcceptedSolution ?? slide.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="run-result run-style-error">
-	<div class="run-verdict label-danger">Нарушение стиля</div>
+	<div class="run-verdict label-danger">Нарушение стилевых требований</div>
 	<pre class="no-rounds"><code class="run-details"></code></pre>
 	<div><small>В некоторых ситуациях стилевые проверки тут могут быть жестче, чем необходимо в реальной жизни.</small></div>
 </div>
