+ Arrays Exercise Add tasks to Ifs InstructorNotes

--- a/src/uLearn.Web/Views/Analytics/SystemStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/SystemStatistics.cshtml
@@ -5,7 +5,7 @@
 <body>
 	<div class="wide-container">
 		<h2 id="questions">Заданные вопросы</h2>
-		TODO
+		<div class="load-content" data-url="@Url.Action("AllQuestions")"></div>
 
 		<h2 id="timeline">Общая динамика прогресса</h2>
 		<div class="load-content" data-url="@Url.Action("DailyStatistics")"></div>
