Account can be edited by user now.

--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -2,11 +2,13 @@
     ViewBag.Title = "Управление аккаунтом | uLearn";
 }
 <div class="container">
-	<h2>@ViewBag.Title</h2>
+	<h2>@User.Identity.Name</h2>
 
 	<p class="text-success">@ViewBag.StatusMessage</p>
 	<div class="row">
 		<div class="col-md-12">
+			@Html.Action("ChangeDetailsPartial")
+
 			@if (ViewBag.HasLocalPassword)
 			{
 				@Html.Partial("_ChangePasswordPartial")
