--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,14 +1,12 @@
 ﻿@using Microsoft.AspNet.Identity
 @model uLearn.Web.Models.ManageUserViewModel
 
-<p>Вы вошли как <strong>@User.Identity.GetUserName()</strong>.</p>
-
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
 	@Html.AntiForgeryToken()
 	<h4>Изменение пароля</h4>
 	<hr />
-	@Html.ValidationSummary()
+	@Html.ValidationSummary("Нет, так не пойдет!")
 	<div class="form-group">
 		@Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
