--- a/src/uLearn.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,9 +1,11 @@
-﻿@using Microsoft.Owin.Security
+﻿@model dynamic
+@using Microsoft.Owin.Security
+
 
 <h4>Вход с помощью</h4>
 @{
-	var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-	if (loginProviders.Count() == 0)
+	var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes().ToList();
+	if (!loginProviders.Any())
 	{
 		<div>
 			<p>
