--- a/src/uLearn.Web/Views/Account/_SetPasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_SetPasswordPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model uLearn.Web.Models.ManageUserViewModel
 
 <p class="text-info">
-	У вас ещё нет логина и пароля для этого сайта.
+	У вас еще нет логина и пароля для этого сайта.
 	Создайте логин и пароль и вы сможете заходить на этот сайт без использования внешнего логина.
 </p>
 
@@ -9,9 +9,9 @@
 {
 	@Html.AntiForgeryToken()
 
-	<h4>Create Local Login</h4>
+	<h4>Создать локальный логин</h4>
 	<hr />
-	@Html.ValidationSummary()
+	@Html.ValidationSummary("Нет, так не пойдет!")
 	<div class="form-group">
 		@Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
 		<div class="col-md-10">
@@ -26,7 +26,7 @@
 	</div>
 	<div class="form-group">
 		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Set password" class="btn btn-default" />
+			<input type="submit" value="Установить пароль" class="btn btn-default" />
 		</div>
 	</div>
 }
