--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -24,7 +24,7 @@
 		<div class="load-content" data-url="@Url.Action("SlideRatings", args)"></div>
 
 		<h2 id="questions">Заданные вопросы</h2>
-		<div class="load-content" data-url="@Url.Action("Questions", "Course", args)"></div>
+		<div class="load-content" data-url="@Url.Action("Items", "Questions", args)"></div>
 
 		<h2 id="timeline">Общая динамика прогресса</h2>
 		<div class="load-content" data-url="@Url.Action("DailyStatistics", args)"></div>
