--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -10,7 +10,7 @@
 				<h4 class="modal-title">Задать вопрос преподавателю</h4>
 			</div>
 			<div class="modal-body">
-				@using (Ajax.BeginForm("AddQuestion", "Course", new AjaxOptions {OnSuccess = "$('#askModal').modal('hide')"}))
+				@using (Ajax.BeginForm("AddQuestion", "Questions", new AjaxOptions {OnSuccess = "$('#askModal').modal('hide')"}))
 				{
 					<input type="hidden" name="courseId" value="@Model.CourseId"/>
 					<input type="hidden" name="slideId" value="@Model.Slide.Id"/>
