--- a/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
+++ b/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
@@ -49,6 +49,11 @@
 	<div class="diff-table tablesorter"></div>
 </div>
 
+<div class="run-result run-wa-no-diff">
+	<div class="run-verdict label-danger">Неверный результат</div>
+	<pre class="no-rounds"><code class="run-details"></code></pre>
+</div>
+
 <div class="run-result run-success">
 	<div class="run-verdict label-success clearfix">Успех!</div>
 	<pre class="no-rounds"><code class="run-details"></code></pre>
