--- a/src/uLearn.Web/Views/Account/List.cshtml
+++ b/src/uLearn.Web/Views/Account/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<ApplicationUser>
 
 @{
-	ViewBag.Title = "Admin Users | uLearn";
+	ViewBag.Title = "Admin Users";
 }
 <div class="container">
 	<h2>Роли пользователей</h2>
