--- a/src/uLearn.Web/Views/Account/Login.cshtml
+++ b/src/uLearn.Web/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model uLearn.Web.Models.LoginViewModel
 
 @{
-	ViewBag.Title = "Вход | uLearn";
+	ViewBag.Title = "Вход";
 }
 <div class="container">
 	<h2>Вход</h2>
