--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Управление аккаунтом | uLearn";
+	ViewBag.Title = "Управление аккаунтом";
 }
 <div class="container">
 	<h2>@User.Identity.Name</h2>
