--- a/src/uLearn.Web/Views/Account/Register.cshtml
+++ b/src/uLearn.Web/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uLearn.Web.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Регистрация | uLearn";
+	ViewBag.Title = "Регистрация";
 }
 <div class="container">
 	<h2>@ViewBag.Title.</h2>
