--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UnitStatisticPageModel
 @{
-	ViewBag.Title = "Статистика и успеваемость | uLearn";
+	ViewBag.Title = "Статистика и успеваемость";
 	var args = new {courseId = Model.CourseId, unitName = Model.UnitName};
 }
 
