--- a/src/uLearn.Web/Views/Unit/CourseList.cshtml
+++ b/src/uLearn.Web/Views/Unit/CourseList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model uLearn.Web.Controllers.CourseListViewModel
 
 @{
-	ViewBag.Title = "Admin Courses | uLearn";
+	ViewBag.Title = "Admin Courses";
 }
 <div class="container">
 	<h2>Управление курсами</h2>
