--- a/src/uLearn.Web/Views/Unit/List.cshtml
+++ b/src/uLearn.Web/Views/Unit/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model uLearn.Web.Controllers.UnitsListViewModel
 
 @{
-	ViewBag.Title = "Admin Course | uLearn";
+	ViewBag.Title = "Admin Course";
 }
 
 <div class="container">
