--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -2,7 +2,7 @@
 @model CoursePageModel
 
 @{
-	ViewBag.Title = Model.CourseTitle + " | uLearn";
+	ViewBag.Title = Model.CourseTitle;
 	ViewBag.Slide = Model.Slide;
 }
 
