--- a/src/uLearn.Web/Views/Course/_ChoiceBlock.cshtml
+++ b/src/uLearn.Web/Views/Course/_ChoiceBlock.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn.Quizes
+﻿@using uLearn
+@using uLearn.Quizes
 @model QuizInfoModel
 @{
 	var quizBlock = (ChoiceBlock)Model.CurrentBlock;
@@ -15,7 +16,10 @@
 			var itemClass = Model.Passed ? (item.IsCorrect ? "right-quiz" : itemChecked ? "wrong-quiz" : "") : "";
 			var title = Model.Passed ? ((item.IsCorrect ? "Правильный" : "Неправильный") + " вариант") : "";
 			<div class="quiz">
-				<label class="@itemClass" title="@title"><input @ans autocomplete="off" id='@(quizBlock.Id + "quizBlock" + item.Id)' name=@("group"+ident) type="@typeInp">@item.Description</label>
+				<label class="@itemClass" title="@title">
+					<input @ans autocomplete="off" id='@(quizBlock.Id + "quizBlock" + item.Id)' name=@("group"+ident) type="@typeInp">
+					@item.Description.RenderTex()
+				</label>
 			</div>
 		}
 	</div>
