--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -26,7 +26,7 @@
 		var quizModel = new QuizInfoModel(Model, quizBlock, blockIndex, passed);
 		if (quizBlock is CodeBlock)
 		{
-			<textarea class='code code-sample'>@(((CodeBlock) quizBlock).Text)</textarea>
+			<textarea class='code code-sample code-no-linenumbers'>@(((CodeBlock) quizBlock).Text)</textarea>
 		}
 		else if (quizBlock is TextBlock)
 		{
@@ -43,7 +43,7 @@
 				mark = "glyphicon " + (res ? "glyphicon-ok" : "glyphicon-remove");
 				style = "color: " + (res ? "green" : "red");
 			}
-			<h4><i class="@mark" style="@style"></i> @block.QuestionIndex. @block.Text</h4>
+			<h4><i class="@mark" style="@style"></i> @block.QuestionIndex. @block.Text.RenderTex()</h4>
 		}
 		
 		delim = blockIndex != quizSlide.Quiz.Blocks.Length - 1 ? "quiz-delimeter" : "";
